modules/gdscript/tests/scripts/analyzer/errors/property_inline_set_type_error.gd
var _prop: int

# Inline setter assigns String to int.
var prop: String:
	set(value):
		_prop = value

func test():
	pass
